[tool.poetry]
name = "resumeio-to-pdf"
version = "0.1.0"
description = "Download your CV from resume.io as a PDF file"
authors = ["Felipe Allegretti <felipe@allegretti.me>"]
readme = "README.md"
license = "LICENSE.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.28.1"
fastapi = "0.92.0"
uvicorn = {extras = ["standard"], version = "0.20.0"}
python-multipart = "0.0.6"
jinja2 = "3.1.2"
fpdf = {git = "https://github.com/reingart/pyfpdf.git"}

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
isort = "5.12.0"

[tool.black]
line-length = 120
verbose = true
preview = true

[tool.isort]
profile = "black"